Archive2/54/a0d7c5e93d9d63/output
cc1plus: warning: command line option '-std=c11' is valid for C/ObjC but not for C++
main.cpp: In function 'void* seriously_aligned_malloc(size_t, size_t)':
main.cpp:9:61: error: 'intptr_t' was not declared in this scope
     unsigned char extraspace = (unsigned char)(alignment - (intptr_t)(allocated+alignment) % alignment);
                                                             ^
main.cpp: In function 'int main()':
main.cpp:28:33: warning: format '%d' expects argument of type 'int', but argument 2 has type 'size_t {aka long unsigned int}' [-Wformat=]
         printf("%d", (size_t)p%7);
                                 ^
main.cpp:31:33: warning: format '%d' expects argument of type 'int', but argument 2 has type 'size_t {aka long unsigned int}' [-Wformat=]
         printf("%d", (size_t)p%7);
                                 ^
main.cpp:34:33: warning: format '%d' expects argument of type 'int', but argument 2 has type 'size_t {aka long unsigned int}' [-Wformat=]
         printf("%d", (size_t)p%7);
                                 ^
